<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="br.pucminas.armproject.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Configure os parâmetros para o movimento dos robôs" />

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Conectar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Velocidade"/>
            <RadioGroup
                android:id="@+id/velocity"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"/>
                <RadioButton
                    android:id="@+id/rb_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"/>
                <RadioButton
                    android:id="@+id/rb_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_garra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/garra"/>
                <NumberPicker
                    android:id="@+id/value_garra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_pulso_sd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pulso_sobe_desce"/>
                <NumberPicker
                    android:id="@+id/value_pulso_sd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_pulso_gira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pulso_giratroio"/>
                <NumberPicker
                    android:id="@+id/value_pulso_gira"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_cotovelo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cotovelo"/>
                <NumberPicker
                    android:id="@+id/value_cotovelo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_ombro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ombro"/>
                <NumberPicker
                    android:id="@+id/value_ombro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_cintura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cintura"/>
                <NumberPicker
                    android:id="@+id/value_cintura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gravar Posição"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Iniciar Sequência"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Parar"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enviar Sequência"/>
    </LinearLayout>
</layout>
